--- a/PTVN to PF/MainWindowController.xib
+++ b/PTVN to PF/MainWindowController.xib
@@ -53,7 +53,7 @@
                             </textField>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="56T-na-vUf">
                                 <rect key="frame" x="117" y="711" width="142" height="32"/>
-                                <buttonCell key="cell" type="push" title="More Processing" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="eLy-hS-KTp">
+                                <buttonCell key="cell" type="push" title="More Processing" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="eLy-hS-KTp">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
@@ -342,7 +342,7 @@ PMH</string>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="takeClear:" target="-2" id="H9x-tu-Mb5"/>
+                                    <action selector="takeCopyCC:" target="-2" id="imS-yh-ayD"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OMm-Wl-Y1C">
@@ -352,7 +352,7 @@ PMH</string>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="takeClear:" target="-2" id="9yD-xd-vHs"/>
+                                    <action selector="takeCopySubjective:" target="-2" id="tqn-1q-pQv"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WZV-eh-SY3">
@@ -362,7 +362,7 @@ PMH</string>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="takeClear:" target="-2" id="yyR-LB-R2X"/>
+                                    <action selector="takeCopyObjective:" target="-2" id="wBg-4N-b4L"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ipn-ux-1zx">
@@ -372,7 +372,7 @@ PMH</string>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="takeClear:" target="-2" id="RDI-pj-64j"/>
+                                    <action selector="takeCopyAssessment:" target="-2" id="plY-gT-k2X"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ea3-ph-pob">
@@ -382,7 +382,7 @@ PMH</string>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="takeClear:" target="-2" id="Gy6-VJ-l5f"/>
+                                    <action selector="takeCopyPlan:" target="-2" id="Cca-iE-ahh"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XsG-7t-7B7">
@@ -392,7 +392,7 @@ PMH</string>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="takeClear:" target="-2" id="Bm2-8s-CGz"/>
+                                    <action selector="takeCopyProblem:" target="-2" id="DSP-6a-KoM"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LuT-76-1Uz">
@@ -402,7 +402,7 @@ PMH</string>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="takeClear:" target="-2" id="hay-Mf-Nun"/>
+                                    <action selector="takeCopyNewPMH:" target="-2" id="Abo-7p-Tp9"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -412,7 +412,7 @@ PMH</string>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
-            <point key="canvasLocation" x="144.5" y="506.5"/>
+            <point key="canvasLocation" x="-119.5" y="387.5"/>
         </window>
         <customObject id="djf-kn-Qhd" customClass="DragAndDropZone" customModule="PTVN_to_PF" customModuleProvider="target"/>
     </objects>
